# meetingsdk-linux-raw-recording-sample

./: .gitignore  LICENSE.md  README.md
Dockerfile-Centos8/: Dockerfile
Dockerfile-Centos9/: Dockerfile
Dockerfile-Ubuntu/: Dockerfile
Dockerfile-ol8/: Dockerfile
demo/: AuthServiceEventListener.cpp  AuthServiceEventListener.h  CMakeLists.txt  MeetingParticipantsCtrlEventListener.cpp  MeetingParticipantsCtrlEventListener.h  MeetingRecordingCtrlEventListener.cpp  MeetingRecordingCtrlEventListener.h  MeetingReminderEventListener.cpp  MeetingReminderEventListener.h  MeetingServiceEventListener.cpp  MeetingServiceEventListener.h  NetworkConnectionHandler.cpp  NetworkConnectionHandler.h  ZoomSDKAudioRawData.cpp  ZoomSDKAudioRawData.h  ZoomSDKRenderer.cpp  ZoomSDKRenderer.h  ZoomSDKVideoSource.cpp  ZoomSDKVideoSource.h  ZoomSDKVirtualAudioMicEvent.cpp  ZoomSDKVirtualAudioMicEvent.h  config.txt  config.txt.example  meeting_sdk_demo.cpp  setup-pulseaudio-centos.sh  setup-pulseaudio.sh
demo/include/: readme.md
demo/lib/zoom_meeting_sdk/: readme.md
demo/lib/zoom_meeting_sdk/json/: readme.md
token/: index.js  package-lock.json  package.json
